[package]
name = "life"
version = "0.1.0"
edition = "2021"
description = "Conway's Game of Life"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.17", features = ["derive"] }
bv = "0.11.1"
rand = "0.8.5"
ncurses = "5.101.0"
